[gd_scene load_steps=9 format=3 uid="uid://bfnin3q7ivbx3"]

[ext_resource type="Script" uid="uid://f5qlmoend4np" path="res://src/gameplay/items/item_object.gd" id="1_u8rix"]
[ext_resource type="PackedScene" uid="uid://cu3jjchhevkc" path="res://src/gameplay/items/effects/dropped_item_effect.tscn" id="2_6iaba"]
[ext_resource type="Theme" uid="uid://cjexjpecooqvc" path="res://src/ui/themes/inventory_titles_labels.tres" id="5_jkqsk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6iaba"]
radius = 40.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igsn6"]
size = Vector2(16, 4)

[sub_resource type="Animation" id="Animation_jkqsk"]
resource_name = "pulse_gems"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroppedItemEffect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_6iaba"]
resource_name = "pulse_potions"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(3, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroppedItemEffect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8iy1o"]
_data = {
&"pulse_gems": SubResource("Animation_jkqsk"),
&"pulse_potions": SubResource("Animation_6iaba")
}

[node name="ItemObject" type="RigidBody2D" groups=["items"]]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_u8rix")

[node name="DroppedItemEffect" parent="." instance=ExtResource("2_6iaba")]
position = Vector2(0, 15)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(3, 3)
rotation = 0.261799

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_6iaba")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 48)
shape = SubResource("RectangleShape2D_igsn6")
metadata/_edit_lock_ = true

[node name="ItemAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8iy1o")
}
speed_scale = 0.75

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ItemInteraction" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = -116.0
offset_right = 64.0
offset_bottom = -96.0

[node name="Label" type="Label" parent="ItemInteraction"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jkqsk")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Collect"

[node name="ColorRect" type="ColorRect" parent="ItemInteraction"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.321)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
